syntax = "proto2";

package entry;

option java_package = "com.segway.prototest.entry";
option java_outer_classname ="ProtoTestInt";

message IntEntry{
    required int32 val1 = 1;
}